Fixed h1 font size on firefox, because it somehow broke??????

--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ body {
   overflow-x:hidden;
   display:flex
 }
+h1 {
+  font-size: 1.5em;
+}
 h3 {
   font-size:inherit;
   font-weight:inherit;
